use_s=False for TPerc; add predict to main; add psnr and ssim from paper

--- a/config/train/ttsr_warmup.yml
+++ b/config/train/ttsr_warmup.yml
@@ -9,7 +9,7 @@ composer: TTSRLitComposer
 
 trainer__kwargs:
   max_epochs: 2
-  track_grad_norm: 2
+  # track_grad_norm: 2
   # gradient_clip_val: .5
   # precision: 16
   accelerator: 'dp'
