--- a/config/train/ttsr.yml
+++ b/config/train/ttsr.yml
@@ -4,13 +4,16 @@ log_save_dir: './logs_full_ttsr_cufed5'
 model_checkpoint_callback__monitor: ['avg_val_psnr', 'avg_val_ssim']
 model_checkpoint_callback__save_top_k: 5
 model_checkpoint_callback__mode: 'max'
-baseline_composer: TTSRLitComposer
-baseline_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_ttsr_cufed5/version_0/checkpoints/epoch=1-avg_val_psnr=23.6239-avg_val_ssim=0.6662.ckpt'
-# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_3/checkpoints/epoch=4-avg_val_psnr=22.8431-avg_val_ssim=0.6491.ckpt'
+# baseline_composer: TTSRLitComposer
+# baseline_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_ttsr_cufed5/version_0/checkpoints/epoch=1-avg_val_psnr=23.6239-avg_val_ssim=0.6662.ckpt'
+# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_16/checkpoints/epoch=7-avg_val_psnr=22.8162-avg_val_ssim=0.6502.ckpt'
+# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_17/checkpoints/epoch=7-avg_val_psnr=24.6411-avg_val_ssim=0.7335.ckpt'
+# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_18/checkpoints/epoch=7-avg_val_psnr=24.8812-avg_val_ssim=0.7421.ckpt'
+model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_19/checkpoints/epoch=5-avg_val_psnr=25.0431-avg_val_ssim=0.7482.ckpt'
 composer: FullTTSRLitComposer
 
 trainer__kwargs:
-  max_epochs: 48
+  max_epochs: 50 #20 # 26 # 34  # 41 48
   # track_grad_norm: 2
   # gradient_clip_val: .5
   # precision: 16
