--- a/config/test/ttsr.yml
+++ b/config/test/ttsr.yml
@@ -1,9 +1,11 @@
-model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_20/checkpoints/epoch=1-avg_val_psnr=25.0534-avg_val_ssim=0.7462.ckpt'
+# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_20/checkpoints/epoch=1-avg_val_psnr=25.0534-avg_val_ssim=0.7462.ckpt'
+model_pt_checkpoint: './drive/MyDrive/skoltech/train_ttsr_orig/model/model_00050.pt'
 composer: FullTTSRLitComposer
-output_dir: 'orig_output'
+output_dir: './drive/MyDrive/skoltech/exp_2_output'
 # modes: test
 modes: predict
 
 test_dataset: 'CufedTestDataset'
 test_dataset__kwargs:
-  dataset_dirpath: '/trinity/home/l.kulikov/data/cufed/test'
+  # dataset_dirpath: '/trinity/home/l.kulikov/data/cufed/test'
+  dataset_dirpath: './CUFED/test'
