--- a/config/train/exp_3/ttsr_colab.yml
+++ b/config/train/exp_3/ttsr_colab.yml
@@ -1,14 +1,9 @@
 # Main metainfo
-log_save_dir: './train_suite_ttsr_orig'
+log_save_dir: './drive/MyDrive/skoltech/exp_3_1/lightning_logs'
 
 model_checkpoint_callback__monitor: ['a_psnr', 'a_ssim']
 model_checkpoint_callback__save_top_k: 55
 model_checkpoint_callback__mode: 'max'
-# baseline_composer: TTSRLitComposer
-# baseline_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig/version_0/checkpoints/epoch=1-avg_val_psnr=25.6136-avg_val_ssim=0.7534.ckpt'
-# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_16/checkpoints/epoch=7-avg_val_psnr=22.8162-avg_val_ssim=0.6502.ckpt'
-# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_17/checkpoints/epoch=7-avg_val_psnr=24.6411-avg_val_ssim=0.7335.ckpt'
-# model_checkpoint: '/trinity/home/l.kulikov/projects/train-suite/logs_full_ttsr_cufed5/version_18/checkpoints/epoch=7-avg_val_psnr=24.8812-avg_val_ssim=0.7421.ckpt'
 # model_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig'
 composer: FullTTSRLitComposer
 
@@ -18,15 +13,15 @@ trainer__kwargs:
   # gradient_clip_val: .5
   # precision: 16
   accelerator: 'dp'
-  limit_train_batches: 0.01
-  limit_val_batches: 0.1
+  # limit_train_batches: 0.01
+  # limit_val_batches: 0.1
   # fast_dev_run: True
 
 # Model
 model: 'TTSR'
 model__kwargs:
   n_feats: 64
-  num_res_blocks: 16+16+8+4
+  num_res_blocks: 8+8+4+2
   res_scale: 1.
 
 # Training
@@ -64,9 +59,9 @@ discriminator__lr_scheduler: null
 train_dataset: 'CufedTrainDataset'
 train_num_workers: 4
 train_dataset__kwargs:
-  dataset_dirpath: '/trinity/home/l.kulikov/data/cufed/train'
+  dataset_dirpath: './CUFED/train'
 
 val_dataset: 'CufedTestDataset'
 val_num_workers: 2
 val_dataset__kwargs:
-  dataset_dirpath: '/trinity/home/l.kulikov/data/cufed/test'
+  dataset_dirpath: './CUFED/test'
