--- a/config/train/exp_4_2/ttsr_warmup_colab.yml
+++ b/config/train/exp_4_2/ttsr_warmup_colab.yml
@@ -1,29 +1,26 @@
 # Main metainfo
-log_save_dir: './drive/MyDrive/skoltech/exp_3_1/lightning_logs'
+log_save_dir: './drive/MyDrive/skoltech/exp_4_2/lightning_logs'
 
+model_checkpoint: null
 model_checkpoint_callback__monitor: ['a_psnr', 'a_ssim']
-model_checkpoint_callback__save_top_k: 55
+model_checkpoint_callback__save_top_k: 5
 model_checkpoint_callback__mode: 'max'
-# model_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig'
-# baseline_checkpoint: ...
-# baseline_composer: ...
-composer: FullTTSRLitComposer
+composer: TTSRLitComposer
 
 trainer__kwargs:
-  max_epochs: 48
+  max_epochs: 2
   accelerator: 'dp'
 
 # Model
 model: 'TTSR'
 model__kwargs:
   n_feats: 64
-  num_res_blocks: 16+16+4
+  num_res_blocks: 4+4+2+1
   res_scale: 1.
-  experiment: '3_1'
 
 # Training
 batch_size: 9
-loss: 'rec+0.01*per+0.01*tper+0.001*adv'
+loss: 'rec'
 
 optimizer: Adam
 lr:
@@ -37,20 +34,6 @@ lr_scheduler: StepLR
 lr_scheduler__kwargs:
   step_size: 999999
   gamma: .5
-
-add_vgg19: True
-use_discriminator: True
-discriminator: Discriminator
-discriminator__args: [160]
-
-discriminator__optimizer: Adam
-discriminator__lr: !!float 1e-4
-discriminator__optimizer__kwargs:
-  betas: [0., 0.9]
-  eps: !!float 1e-8
-
-discriminator__lr_scheduler: null
-# discriminator__frequency: 2
 
 # Datasets
 train_dataset: 'CufedTrainDataset'
