add baseline_checkpoint option

--- a/config/train/exp_3_1/ttsr_colab.yml
+++ b/config/train/exp_3_1/ttsr_colab.yml
@@ -6,7 +6,7 @@ model_checkpoint_callback__save_top_k: 55
 model_checkpoint_callback__mode: 'max'
 # model_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig'
 # baseline_checkpoint: ...
-# baseline_composer: ...
+baseline_composer: TTSRLitComposer
 composer: FullTTSRLitComposer
 
 trainer__kwargs:
