--- a/config/train/exp_6_2/ttsr_colab.yml
+++ b/config/train/exp_6_2/ttsr_colab.yml
@@ -1,14 +1,15 @@
 # Main metainfo
-log_save_dir: './drive/MyDrive/skoltech/exp_6/lightning_logs'
+log_save_dir: './drive/MyDrive/skoltech/exp_6_2/lightning_logs'
 
-model_checkpoint: null
 model_checkpoint_callback__monitor: ['a_psnr', 'a_ssim']
-model_checkpoint_callback__save_top_k: 5
+model_checkpoint_callback__save_top_k: 55
 model_checkpoint_callback__mode: 'max'
-composer: TTSRLitComposer
+# model_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig'
+baseline_composer: TTSRLitComposer
+composer: FullTTSRLitComposer
 
 trainer__kwargs:
-  max_epochs: 2
+  max_epochs: 50
   accelerator: 'dp'
 
 # Model
@@ -17,11 +18,11 @@ model__kwargs:
   n_feats: 64
   num_res_blocks: 16+16+8+4
   res_scale: 1.
-  experiment: '6'
+  experiment: '6_2'
 
 # Training
 batch_size: 9
-loss: 'rec'
+loss: 'rec+0.01*per+0.01*tper+0.001*adv'
 
 optimizer: Adam
 lr:
@@ -35,6 +36,20 @@ lr_scheduler: StepLR
 lr_scheduler__kwargs:
   step_size: 999999
   gamma: .5
+
+add_vgg19: True
+use_discriminator: True
+discriminator: Discriminator
+discriminator__args: [160]
+
+discriminator__optimizer: Adam
+discriminator__lr: !!float 1e-4
+discriminator__optimizer__kwargs:
+  betas: [0., 0.9]
+  eps: !!float 1e-8
+
+discriminator__lr_scheduler: null
+# discriminator__frequency: 2
 
 # Datasets
 train_dataset: 'CufedTrainDataset'
