--- a/config/train/exp_4_1/ttsr_colab.yml
+++ b/config/train/exp_4_1/ttsr_colab.yml
@@ -5,6 +5,7 @@ model_checkpoint_callback__monitor: ['a_psnr', 'a_ssim']
 model_checkpoint_callback__save_top_k: 55
 model_checkpoint_callback__mode: 'max'
 # model_checkpoint: './drive/MyDrive/skoltech/train_suite_ttsr_orig'
+baseline_composer: TTSRLitComposer
 composer: FullTTSRLitComposer
 
 trainer__kwargs:
